k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: nestjs-api
  name: beta
