k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-api-deployment
  namespace: beta
  labels:
    app: nestjs-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nestjs-api
  template:
    metadata:
      labels:
        app: nestjs-api
    spec:
      containers:
        - name: app
          image: nestjs-api:0.0.1
          imagePullPolicy: IfNotPresent #Never
          volumeMounts:
            - name: nestjs-api-env-file
              mountPath: /app/.env
              subPath: .env # .env file
              readOnly: true
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          ports:
            - containerPort: 3000
      volumes:
        - name: nestjs-api-env-file
          # kubectl create configmap nestjs-api-env --from-file=.env --namespace=beta
          configMap:
            name: nestjs-api-env
          # kubectl create configmap nestjs-api-env --from-file=.env --namespace=beta
          # secret:
          #   secretName: nestjs-api-env
