k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-api-svc
  namespace: beta
spec:
  selector:
    app: nestjs-api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 18000
      targetPort: 3000
      nodePort: 30003 # this is for when using type: NodePort
